...
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_details_title" />

    <EditText
        android:id="@+id/meeting_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:hint="@string/hint_subject_title"
        app:layout_constraintBottom_toBottomOf="@+id/meeting_title"
...
        android:text="@string/subject_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_title" />

    <EditText
        android:id="@+id/meeting_subject_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textMultiLine"
        android:gravity="top"
...
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/email_title">

        <EditText
            android:id="@+id/email_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
...
        app:layout_constraintTop_toTopOf="@+id/add_more_email"
        app:srcCompat="@drawable/ic_minus_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    <Button
        android:visibility="gone"
        android:id="@+id/save_meeting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save_meeting"
        android:layout_gravity="bottom|end"/>
...
